versions/v1/README.md
# 值班回复助手

这是一个面向 Windows 值班场景的本地桌面小工具。数据默认保存在本机，不会自动把聊天内容上传到网络。

## 已实现功能

- 小型窗口及始终置顶
- 常用回复的新增、编辑、删除和搜索
- `Alt + 1` 至 `Alt + 9` 全局快捷回复
- 快捷键触发后自动粘贴，但不会自动发送
- `Ctrl + Alt + Space` 显示或隐藏窗口
- 基于本地规则的礼貌用语润色
- 礼貌替换规则可自行编辑
- 导入并检索 TXT、Markdown、Word 和 PDF 学习文档
- SQLite 本地保存话术、文档索引及使用次数

## 快速运行

### 方法一：直接运行

1. Windows 10/11 安装 Python 3.10 或更高版本。
2. 安装时勾选 `Add Python to PATH`。
3. 双击 `run.bat`。

程序主体无需安装第三方库。

### 方法二：打包成 EXE

双击 `build_exe.bat`。脚本会安装 PyInstaller，并在 `dist` 文件夹生成：

```text
值班回复助手.exe
```

以后只需要双击这个 EXE，不必打开命令行。

## 文档导入

TXT、MD、LOG 和 CSV 可以直接导入。

如需导入 Word 或 PDF，在当前目录打开命令行并运行：

```bash
pip install python-docx pymupdf
```

然后重新启动程序。

目前采用本地文档导入，尚未直接连接飞书 API。你可以先把飞书学习文档导出为 Word 或 PDF，再导入程序。这样不需要单位管理员授权，也更适合先验证实际使用效果。

## 快捷键说明

| 快捷键 | 功能 |
|---|---|
| `Alt + 1`～`Alt + 9` | 粘贴对应常用回复 |
| `Ctrl + Alt + Space` | 显示或隐藏程序 |
| 双击话术 | 复制并粘贴该话术 |

程序默认不会模拟回车，因此粘贴后需要你检查并手动发送。

部分软件可能已经占用某个快捷键。如果按键没有反应，可以更换话术编号；后续版本可以进一步加入自定义组合键。

## 数据保存位置

程序数据保存在：

```text
%APPDATA%\DutyReplyAssistant
```

其中：

- `assistant.db`：话术、文档索引和使用次数
- `config.json`：礼貌替换规则、窗口大小等设置

备份这两个文件即可保留个人话术库。

## 使用建议

1. 第一次使用先编辑 7 条默认话术，使其符合所在单位的口径。
2. 将最常用的回复分配到 `Alt + 1` 至 `Alt + 5`。
3. 把飞书文档按主题导出成多个 Word 或 Markdown 文件，检索效果会更清楚。
4. 文档有更新时重新导入同一路径，程序会覆盖旧索引。
5. 不建议导入包含密码、密钥、个人身份信息或其他禁止本地缓存的资料。

## 当前版本的边界

- 礼貌润色采用可控的本地词语规则，不是大模型语义改写。
- Word 表格、PDF 扫描图片中的文字可能无法完整提取。
- 直接同步飞书文档需要创建飞书企业自建应用并获得文档读取权限，建议确认单位政策后再做。
- 第一版主要针对 Windows；在其他系统运行时，全局快捷键和自动粘贴不会启用。
